tests/fixtures/invalid/pow_bool_float_float.py
# Cannot call pow() with Bool, Float, Float
x = pow(True, 1.0, 1.0)
